replaced drawer with bottom navigation

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,7 @@
   "@@locale": "en",
   "appTitle": "Fitness App",
   "noRouteFound": "No Route Found",
-  "titleRoutine": "Routines",
+  "titleRoutine": "Home",
   "titleWalk": "Purposed Walks",
   "titleAppointment": "Appointments",
   "titleWalkMedia": "Walk Media",
